--- a/src/app/dialog/modal-dialog/modal-dialog.component.scss
+++ b/src/app/dialog/modal-dialog/modal-dialog.component.scss
@@ -238,3 +238,30 @@ abc {
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-duration: .2s;
   }
+
+  .shakeMe {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+  
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+  
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+  
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
+
+  
